--- a/WPFTips/ListViews/ListViewPage.xaml
+++ b/WPFTips/ListViews/ListViewPage.xaml
@@ -48,11 +48,16 @@
                             Value="true" />
                     <Setter Property="Template">
                         <Setter.Value>
-                            <ControlTemplate TargetType="ListBoxItem">
-                                <Border x:Name="Border"
-                                          Padding="2"
-                                          SnapsToDevicePixels="true"
-                                          Background="Transparent">
+                            <ControlTemplate TargetType="ListViewItem">
+                                <ContentControl>
+                                    
+                                    <Border x:Name="Border"
+                                              Padding="2"
+                                              SnapsToDevicePixels="true"
+                                              Background="Transparent">
+
+                                        <GridViewRowPresenter VerticalAlignment="{TemplateBinding VerticalContentAlignment}" />
+                                    </Border>
 
                                     <VisualStateManager.VisualStateGroups>
                                         <VisualStateGroup x:Name="CommonStates">
@@ -73,20 +78,19 @@
                                                 </Storyboard>
                                             </VisualState>
 
-                                        <VisualState x:Name="SelectedUnfocused">
-                                            <Storyboard>
-                                                <ColorAnimationUsingKeyFrames Storyboard.TargetName="Border"
-                                                                              Storyboard.TargetProperty="(Panel.Background).  (SolidColorBrush.Color)">
-                                                    <EasingColorKeyFrame KeyTime="0"
-                                                                         Value="Red" />
-                                                </ColorAnimationUsingKeyFrames>
-                                            </Storyboard>
-                                        </VisualState>
+                                            <VisualState x:Name="SelectedUnfocused">
+                                                <Storyboard>
+                                                    <ColorAnimationUsingKeyFrames Storyboard.TargetName="Border"
+                                                                                  Storyboard.TargetProperty="(Panel.Background).  (SolidColorBrush.Color)">
+                                                        <EasingColorKeyFrame KeyTime="0"
+                                                                             Value="Red" />
+                                                    </ColorAnimationUsingKeyFrames>
+                                                </Storyboard>
+                                            </VisualState>
 
                                         </VisualStateGroup>
                                     </VisualStateManager.VisualStateGroups>
-                                    <GridViewRowPresenter VerticalAlignment="{TemplateBinding VerticalContentAlignment}" />
-                                </Border>
+                                </ContentControl>
                             </ControlTemplate>
                         </Setter.Value>
                     </Setter>
