クラス追加 / コントロールを動的に入れ替える機能のサンプルページを追加

--- a/WPFTips/MainPage.xaml
+++ b/WPFTips/MainPage.xaml
@@ -24,5 +24,11 @@
                 Click="Button_Click"
                 />
 
+        <Button Content="toControlSwitchSamplePage"
+                Grid.Column="1"
+                Grid.Row="0"
+                Click="Button_Click_1"
+                />
+
     </Grid>
 </Page>
